<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.debbyrahardjo.prototype.settings">

    <TextView android:text="@string/title_activity_settings" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <SeekBar
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/jarak_biaya"
        android:layout_marginTop="42dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView"
        android:max="2"
        android:indeterminate="false"
        android:progress="1" />

    <SeekBar
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/jarak_quality"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/jarak_biaya"
        android:max="2"
        android:indeterminate="false"
        android:progress="1" />

    <SeekBar
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/quality_biaya"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/jarak_quality"
        android:max="2"
        android:indeterminate="false"
        android:progress="1" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Jarak"
        android:layout_alignBottom="@+id/jarak_biaya"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="7dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Biaya"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/jarak_biaya"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="7dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Jarak"
        android:layout_alignBottom="@+id/jarak_quality"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="7dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Quality"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/jarak_quality"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="7dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quality"
        android:layout_alignBottom="@+id/quality_biaya"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="7dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Biaya"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/quality_biaya"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="7dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:id="@+id/SubmitButton"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/quality_biaya"
        android:layout_alignLeft="@+id/quality_biaya"
        android:layout_alignStart="@+id/quality_biaya" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reset"
        android:id="@+id/ResetButton"
        android:layout_alignTop="@+id/SubmitButton"
        android:layout_alignRight="@+id/quality_biaya"
        android:layout_alignEnd="@+id/quality_biaya" />
</RelativeLayout>
